Add first draft for the app.

--- a/src/template.html
+++ b/src/template.html
@@ -4,10 +4,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>TODO List</title>
 </head>
 
 <body>
+    <div id="root">
+        <h1>TODO List</h1>
+        <section>
+            <div id="inpt-div">
+                <input type="text" placeholder="Enter a task" id="task-inpt">
+                <button id="add-btn">Add</button>
+            </div>
+            <div class="tasks">
+                <div id="task-div">
+                    <div id="taskbtn-div">
+                        <span id="done-spn"> </span>
+                        <h2>First task</h2>
+                    </div>
+                    <button id="rmv-btn">x</button>
+                </div>
+            </div>
+        </section>
+    </div>
 </body>
 
 </html>
