--- a/src/template.html
+++ b/src/template.html
@@ -9,21 +9,14 @@
 
 <body>
     <div id="root">
-        <h1>TODO List</h1>
         <section>
+            <h1>TODO List</h1>
             <div id="inpt-div">
-                <input type="text" placeholder="Enter a task" id="task-inpt">
+                <input type="text" placeholder="Enter a task" id="task-inpt" required>
                 <button id="add-btn">Add</button>
             </div>
-            <div class="tasks">
-                <div id="task-div">
-                    <div id="taskbtn-div">
-                        <span id="done-spn"> </span>
-                        <h2>First task</h2>
-                    </div>
-                    <button id="rmv-btn">x</button>
-                </div>
-            </div>
+            <div id="tasks"></div>
+            <h3>Tasks: </h3>
         </section>
     </div>
 </body>
