--- a/src/template.html
+++ b/src/template.html
@@ -16,7 +16,10 @@
                 <button id="add-btn">Add</button>
             </div>
             <div id="tasks"></div>
-            <h3>Tasks: </h3>
+            <div id="info">
+                <h3 id="tsks">Tasks: </h3>
+                <h3 id="ctsks">Completed Tasks: </h3>
+            </div>
         </section>
     </div>
 </body>
